<resources>
    <string name="app_name">Inventory App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_client_or_suuplier">Add %1$s</string>
    <string name="edit_client_or_suuplier">Edit %1$s</string>
    <string name="no_enterprise_found">No %1$s found. You can add new %1$ss by clicking \"New %1$s\" from the menu.</string>
    <string name="supplierOrEnterPrise">%1$s name:</string>
    <string name="stock_not_enough_warning">You don\'t have enough stock for this delivery. You have only %1$d items.</string>
    <string name="quantity_should_be_positive">Quantity should be a positive integer</string>
    <string name="price_should_not_contain_text">Price shouldn\'t contain texts in it. If you\'re not sure about the price, you can live it as 0.</string>
    <string name="products">Products</string>
    <string name="suppliers">Suppliers</string>
    <string name="clients">Clients</string>
    <string name="transactions">Transactions</string>
    <string name="new_product">New Product</string>
    <string name="new_supplier">New Supplier</string>
    <string name="new_client">New Client</string>
    <string name="new_delivery">New Delivery</string>
    <string name="new_acquisition">New Acquisition</string>
    <string name="add_product">Add Product</string>
    <string name="all_enterprises">All %1$ss</string>
    <string name="new_transaction">New %1$s</string>
    <string name="all_transactions">All transactions</string>
    <string name="all_products">All Products</string>
    <string name="acquisition">Acquisition</string>
    <string name="delivery">Delivery</string>
    <string name="cancel">Cancel</string>
    <string name="error_saving_product">Error with saving product</string>
    <string name="product_saved_successfully">Product saved successfully</string>
    <string name="no_supplier_chosen">You didn\'t chose a supplier</string>
    <string name="product_name_empty">Product name cannot be empty</string>
    <string name="acquisition_title">Acquisition of %1$d %2$s from the supplier %3$s</string>
    <string name="delivery_title">Delivery of %1$d %2$s to the client %3$s</string>
    <string name="in_stock">In stock: %1$d</string>
    <string name="edit_product">Edit Product</string>
    <string name="order">Order</string>
    <string name="sale">Sale</string>
    <string name="change_date"><u>Change date</u></string>
    <string name="error_saving">Error with saving</string>
    <string name="add_supplier"><u>Add Supplier</u></string>
    <string name="price_should_be_number">Price should be a positive real number</string>
    <string name="add_client"><u>Add Client</u></string>
    <string name="enterprise_successfully_saved">Entry is successfully saved</string>
    <string name="error_updating">Error updating</string>
    <string name="successfully_updated">Successfully updated</string>
    <string name="delete">Delete</string>
    <string name="no_products_found">No products found. You can begin adding products by clicking on + button</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="e_mail">E-mail:</string>
    <string name="phone">Phone:</string>
    <string name="contact_person">Contact person:</string>
    <string name="product_name">Product Name:</string>
    <string name="sale_price">Sale Price:</string>
    <string name="in_stock_alone">In stock:</string>
    <string name="supplier">Supplier:</string>
    <string name="add_image">Add image:</string>
    <string name="quantity_in_stock">Quantity In Stock:</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="see_all">SEE ALL:</string>
    <string name="add">ADD:</string>
    <string name="no_transactions_found">No transaction reports found. You can realize a new delivery or acquisition by clicking on + button or from the menu.</string>
    <string name="cd_add_supplier">Button for adding a new supplier, if supplier is not already on the list</string>
    <string name="cd_product_image">Image of the product, if available</string>
    <string name="save">Save</string>
    <string name="newtransaction">NEW TRANSACTION</string>
    <string name="date">Date:</string>
    <string name="cd_app_icon">Inventory icon, shown when list is empty</string>
    <string name="cd_add_enterprise_btn">The button for adding new enterprise, if it is not already on the list</string>
    <string name="add_your_first_product">Add your first product</string>
    <string name="tap_to_enter_first_product">Tap to enter your first product</string>

    <string-array name="dialog_options">
        <item>Take an image</item>
        <item>Choose from gallery</item>
    </string-array>

</resources>
