<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_main"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_marginBottom="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:useCompatPadding="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_item"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_marginEnd="@dimen/margin_standard"
        app:layout_constraintBottom_toTopOf="@id/fab_main"
        app:layout_constraintRight_toRightOf="parent"
        app:useCompatPadding="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_delivery"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_marginBottom="@dimen/margin_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fab_main"
        app:useCompatPadding="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_acquisition"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:padding="0dp"
        app:useCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@id/fab_delivery"
        app:layout_constraintEnd_toStartOf="@id/fab_add_item" />

    <TextView
        android:id="@+id/hint_acquisition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/acquisition"
        app:layout_constraintEnd_toEndOf="@+id/fab_acquisition"
        app:layout_constraintStart_toStartOf="@+id/fab_acquisition"
        app:layout_constraintTop_toTopOf="@id/fab_acquisition" />

    <TextView
        android:id="@+id/hint_add_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/fab_add_item"
        app:layout_constraintStart_toEndOf="@+id/fab_acquisition"
        app:layout_constraintTop_toTopOf="@id/fab_add_item" />

    <TextView
        android:id="@+id/hint_Delivery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delivery"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/fab_delivery"
        app:layout_constraintStart_toStartOf="@+id/fab_delivery"
        app:layout_constraintTop_toTopOf="@+id/fab_delivery" />

    <TextView
        android:id="@+id/hint_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/fab_main"
        app:layout_constraintStart_toStartOf="@+id/fab_main"
        app:layout_constraintTop_toTopOf="@+id/fab_main" />

</android.support.constraint.ConstraintLayout>