<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="24dp">

    <Spinner
        android:id="@+id/enterprise_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/transaction_enterprise_tv"
        style="@style/FieldStyle"
        app:layout_constraintBottom_toBottomOf="@+id/enterprise_spinner"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Supplier Name: " />

    <Spinner
        android:id="@+id/product_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/add_enterprise_btn" />

    <TextView
        android:id="@+id/textView7"
        style="@style/FieldStyle"
        android:text="@string/product_name"
        app:layout_constraintBottom_toBottomOf="@+id/product_spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        style="@style/FieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_in_stock"
        app:layout_constraintBaseline_toBaselineOf="@id/transaction_quantity_in_stock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <TextView
        android:id="@+id/transaction_quantity_in_stock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:paddingStart="@dimen/half_padding"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/product_spinner"
        tools:text="20" />

    <EditText
        android:id="@+id/transaction_quantity_et"
        style="@style/editTextStyle"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/transaction_quantity_in_stock" />

    <TextView
        android:id="@+id/textView8"
        style="@style/FieldStyle"
        android:text="@string/quantity"
        app:layout_constraintBaseline_toBaselineOf="@+id/transaction_quantity_et"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/transaction_price_et"
        style="@style/editTextStyle"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@id/transaction_quantity_et" />

    <TextView
        android:id="@+id/textView9"
        style="@style/FieldStyle"
        android:text="@string/price"
        app:layout_constraintBaseline_toBaselineOf="@+id/transaction_price_et"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/transaction_date_tv"
        style="@style/editTextStyle"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/change_date_btn"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@id/transaction_price_et"
        tools:text="28-05-18" />

    <TextView
        android:id="@+id/textView10"
        style="@style/FieldStyle"
        android:text="Date: "
        app:layout_constraintBottom_toBottomOf="@+id/transaction_date_tv"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="textView,textView7,textView8,textView9,textView10, textView11"
        tools:layout_editor_absoluteX="91dp" />

    <Button
        android:id="@+id/save_transaction_btn"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_date_tv" />

    <TextView
        android:id="@+id/change_date_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginTop="8dp"
        android:text="@string/change_date"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_price_et" />

    <TextView
        android:id="@+id/add_enterprise_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="@dimen/half_padding"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/enterprise_spinner"
        app:layout_constraintTop_toBottomOf="@+id/enterprise_spinner"
        tools:text="Add supplier" />

</android.support.constraint.ConstraintLayout>