<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fab_default_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/baseline_add_white_24dp"
            app:useCompatPadding="true" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@color/delivery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/delivery_truck"
            app:useCompatPadding="true" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_acquisition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@color/acquisition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/verification_acquisition"
            app:useCompatPadding="true" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@color/colorAccent"
            app:useCompatPadding="true"
            android:padding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/baseline_add_white_24dp" />

        <TextView
            android:id="@+id/hint_acquisition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/hint_textsize"
            android:gravity="center_horizontal"
            android:text="@string/acquisition"
            android:visibility="gone"
            android:background="@color/hint_background"
            app:layout_constraintEnd_toEndOf="@+id/fab_acquisition"
            app:layout_constraintStart_toStartOf="@+id/fab_acquisition"
            app:layout_constraintTop_toTopOf="@id/fab_acquisition" />

        <TextView
            android:id="@+id/hint_add_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:textSize="@dimen/hint_textsize"
            android:gravity="center_horizontal"
            android:visibility="gone"
            android:background="@color/hint_background"
            app:layout_constraintEnd_toEndOf="@+id/fab_add_item"
            app:layout_constraintStart_toEndOf="@+id/fab_acquisition"
            app:layout_constraintTop_toTopOf="@id/fab_add_item" />

        <TextView
            android:id="@+id/hint_Delivery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delivery"
            android:textSize="@dimen/hint_textsize"
            android:gravity="center_horizontal"
            android:visibility="gone"
            android:background="@color/hint_background"
            app:layout_constraintEnd_toEndOf="@+id/fab_delivery"
            app:layout_constraintStart_toStartOf="@+id/fab_delivery"
            app:layout_constraintTop_toTopOf="@+id/fab_delivery" />

        <TextView
            android:id="@+id/hint_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/hint_textsize"
            android:text="@string/cancel"
            android:visibility="gone"
            android:gravity="center_horizontal"
            android:background="@color/hint_background"
            app:layout_constraintEnd_toEndOf="@+id/fab_main"
            app:layout_constraintStart_toStartOf="@+id/fab_main"
            app:layout_constraintTop_toTopOf="@+id/fab_main" />

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>